# EmbeddedLinux

01_Python/01_Introduction/: Calendar.py  CircleArea.py  GetServerData.py  Largest.py  LoginSystem.py  Task1_CountOccurrences.py  Task2_Vowel.py  Task3_EnvironmentVariables.py  test.py
01_Python/03_Advanced/QuickTasks/: AutoGui.py  SuggestActivity.py
01_Python/03_Advanced/task1/: FavWebsites.py  SelectFavWeb.py
01_Python/03_Advanced/task2/: InstallExtensions.py
01_Python/03_Advanced/task3/: Location.py
01_Python/04_Advanced/QuickTasks/: NumOfLines.py  NumOfWords.py  WriteListInFile.py  words.txt
01_Python/Database/: Database.py
02_C++/PC_Control/: Readme.md  control  control.cpp  my_program
02_C++/PC_ControlV2/: commands.cpp  commands.hpp  main.cpp  readme.md  server  server.cpp  server.hpp
03_Linux/01_Introduction/: files.md  files.txt
03_Linux/02_Shell/: readme.md
03_Linux/02_Shell/MySharedLibrary/: CMakeLists.txt
03_Linux/02_Shell/Project/: CMakeLists.txt  main.cpp
03_Linux/04_Process_Network/: readme.md
04_Bash/Task1_CreateProject/: createproject.sh
04_Bash/Task2_SystemD/: GenericSystemd.sh  batterynotification.py  service_example.txt
04_Bash/Task3_YtDownload/: YtDownload.sh
04_Bash/Task4_wiki/: wiki.sh
04_Bash/Task5_calculator/: calculator.sh
05_RaspberryPi/: ledcontroller.cpp  ledcontroller.hpp  main.cpp  readings  readings.cpp  readme.md  sensor_data.csv  temp_hum.sh
05_RaspberryPi/Temp_Hum/: averagegui.py  csvwriter.cpp  csvwriter.hpp  readings.hpp  readme.md
05_RaspberryPi/receivedcsv/: sensor_data.csv
(+171 files in other folders)
